feat: update api add children
